[project]
name = "imagen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zoe Cordelier", email = "zoe.cordelier@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pyrefly>=0.60.0",
]

[project.scripts]
imagen = "imagen:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
